Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/invalidos_sintaxis/test3.ajs

// Expresiones no válidas

a+b = 3 +x;
a || b = 3;

